feat: add image style contracts
